fix: overflow of popular goods

--- a/src/components/PopularGoods/PopularGoods.module.scss
+++ b/src/components/PopularGoods/PopularGoods.module.scss
@@ -21,6 +21,10 @@
     &::-webkit-scrollbar {
       display: none;
     }
+
+    @media screen and (max-width: 1024px) {
+      overflow-x: scroll;
+    }
   }
 }
 
